bizinikiwi/pezframe/support/test/tests/pezpallet_ui/call_invalid_return.stderr
error: expected `DispatchResultWithPostInfo` or `DispatchResult`
  --> tests/pezpallet_ui/call_invalid_return.rs:34:39
   |
34 |         pub fn foo(origin: OriginFor<T>) -> ::DispatchResult { todo!() }
   |                                             ^
